--- a/numpy_quiz.ipynb
+++ b/numpy_quiz.ipynb
@@ -77,8 +77,7 @@
    ],
    "source": [
     "x = np.linspace(0, 5, 100, dtype=float) #TODO\n",
-    "noise = np.random.normal(loc = 0, scale = 1, size = 100) #TODO\n",
-    "print(noise)"
+    "noise = np.random.normal(loc = 0, scale = 1, size = 100) #TOD"
    ]
   },
   {
@@ -150,8 +149,7 @@
     }
    ],
    "source": [
-    "t = y(x) + noise #TODO\n",
-    "print(t)\n"
+    "t = y(x) + noise #TODO\n"
    ]
   },
   {
