--- a/numpy_quiz.ipynb
+++ b/numpy_quiz.ipynb
@@ -208,8 +208,7 @@
     "X0 = np.ones((1,x.size))#TODO\n",
     "X1 = x ** 1\n",
     "X2 = x ** 2\n",
-    "X = np.vstack([X0, X1, X2]).T\n",
-    "print(X.shape)"
+    "X = np.vstack([X0, X1, X2]).T"
    ]
   },
   {
